# LUME

./: CMakelists.txt  Cargo.toml  README.md  structure.txt
src/: file+puposedesc.txt  main.cpp  main.rs
src/assets/shaders/: fragment.glsl  vertex.glsl
src/engine/: camera.rs  game.rs  input.rs  math.rs  menu.rs  mod.rs  physics.rs  renderer.rs
src/engine/shaders/: fragment.glsl  vertex.glsl
src/graphics/: mod.rs  model.rs  shader.rs  texture.rs
